Bug 877444: Remove new 'inline function used but not defined' warnings for ScriptSourceObject-related functions. r=terrence