js/src/jsscriptinlines.h
@@ -102,6 +102,11 @@ JSScript::scriptSource() const
     return sourceObject()->source();
 }
 
+inline js::ScriptSourceObject *
+JSScript::sourceObject() const {
+    return &sourceObject_->asScriptSource();
+}
+
 inline JSFunction *
 JSScript::getFunction(size_t index)
 {
@@ -219,6 +224,18 @@ JSScript::setOriginalFunctionObject(JSObject *fun) {
     JS_ASSERT(isCallsiteClone);
     JS_ASSERT(fun->isFunction());
     enclosingScopeOrOriginalFunction_ = fun;
+}
+
+inline js::ScriptSource *
+js::ScriptSourceObject::source() {
+    return static_cast<ScriptSource *>(getReservedSlot(SOURCE_SLOT).toPrivate());
+}
+
+inline js::ScriptSourceObject &
+JSObject::asScriptSource()
+{
+    JS_ASSERT(isScriptSource());
+    return *static_cast<js::ScriptSourceObject *>(this);
 }
 
 #endif /* jsscriptinlines_h___ */
